--- a/style.css
+++ b/style.css
@@ -507,9 +507,10 @@ input[type="text"]::placeholder {
   background-color: black;
   display: flex;
   justify-content: space-around;
-  padding: 20px;
+  padding: 60px;
   padding-right: 100px;
   padding-left: 100px;
+  margin-top: 80px;
 }
 .line {
   width: 0.5px;
@@ -557,4 +558,15 @@ ul.links a {
 
 ul.links a:hover {
   text-decoration: underline;
+}
+.copyright-text{
+  align-items: center;
+  justify-items: center;
+  background-color: black;
+  padding-bottom: 60px;
+}
+.copyright-text p{
+  font-size: 16px;
+  font-weight: 400;
+  color: white;
 }
