--- a/main.css
+++ b/main.css
@@ -7,6 +7,9 @@
 .heading-primary {
   @apply text-[40px] text-primary font-bold leading-[42px];
 }
+.heading-primary-dark {
+  @apply text-[40px] text-white font-bold leading-[42px];
+}
 
 .heading-secondary {
   @apply text-[26px] leading-[28px];
@@ -17,5 +20,6 @@
 }
 
 .setac-primary-button {
-  @apply bg-primary text-white cursor-pointer rounded-full px-6 h-10 text-[12px] font-medium uppercase leading-[22px] flex justify-center items-center;
+  @apply bg-primary  text-white cursor-pointer rounded-full px-6 h-10 text-[12px] font-medium uppercase leading-[22px] flex justify-center items-center;
 }
+
